@@ -87,6 +87,13 @@
                 <fork>true</fork>
             </configuration>
         </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+                <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+            </configuration>
+        </plugin>
     </plugins>
 </build>
 </project>
